# FinAccountingApp-beta

./: .gitattributes  .gitignore  CHANGELOG.md  FinAccountingApp.iss  FinAccountingApp.linux.spec  FinAccountingApp.spec  README.md  README_EN.md  app_paths.py  backup.py  bootstrap.py  config.py  currency_config.json  main.py  migrate_json_to_sqlite.py  pyproject.toml  pytest.ini  requirements-pdf.txt  requirements.txt  test_rust.py
app/: finance_service.py  import_support.py  preferences_service.py  record_service.py  repository_protocols.py  secret_storage.py  services.py  use_case_support.py  use_cases.py  use_cases_records.py
bridge/: __init__.py  ledgera_bridge.py
db/: schema.sql
docs/: alpha1_readiness.md  alpha3_readiness.md  architecture.md
domain/: __init__.py  asset.py  audit.py  budget.py  dashboard.py  debt.py  distribution.py  goal.py  import_result.py  records.py  reports.py  transfers.py  update.py  validation.py
gui/: combobox_compat.py  controller_import_support.py  controller_support.py  controllers.py  exporters.py  helpers.py  hotkeys.py  i18n.py  importers.py  (+13 more)
rust/ledgera_engine/: .gitignore  Cargo.toml  pyproject.toml
rust/ledgera_engine/ffi/: Cargo.toml
rust/ledgera_engine/ffi/src/: lib.rs
rust/ledgera_engine/python/ledgera_core/: __init__.py  ledgera_core.pyi
rust/ledgera_engine/python/tests/: test_all.py  test_engine_integration.py
rust/ledgera_engine/src/: lib.rs
rust/ledgera_engine/storage/src/: audit.rs  lib.rs  metrics.rs  planning.rs
rust/ledgera_engine/sync/: Cargo.toml
rust/ledgera_engine/sync/src/: lib.rs
(+213 files in other folders)
